View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023846 | Open CASCADE | OCCT:Data Exchange | public | 2013-03-21 13:57 | 2013-12-19 13:58 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.5.3 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0023846: A crash on reading of a VRML file with wrong indices | ||||
Description | The VRML file has wrong indices, but it is not a reason to crash the application... | ||||
Steps To Reproduce | Load the attached VRML file by a draw-command: loadvrml s T00000112_0000.wrl The application crashes. | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde(005) bug23846 | ||||
|
crash_11_03_2013.zip (332,562 bytes) |
|
Dear Agv, could you revise the changes please? |
|
The changes are in CR23846. |
|
Reviewed, please test. |
|
Dear BugMaster, Branch CR23846 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: fa1e4f4f3d2b8bc75df56211427ed6776e47eb91 Number of compiler warnings: occt component : Linux: 918 (917 on master) Windows: 855 (855 on master) products component : Linux: 188 (188 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: http://occt-tests/CR23846-master-occt/Debian60-64/bugs/xde/bug23846.html http://occt-tests/CR23846-master-occt/Windows-32-VC9/bugs/xde/bug23846.html bugs xde(005) bug23846 - BAD. There is not a crash on reading of a VRML file if file locate in current directory. loadrml draw-command wrong use Inline command of VRML file. Testing on Linux: Total MEMORY difference: 363658356 / 363283144 Total CPU difference: 50351.58000000019 / 49186.1200000005 Testing on Windows: Total MEMORY difference: 425432848 / 424533248 Total CPU difference: 35822.296875 / 33046.03125 There are not differences in images found by testdiff. |
|
The problem is in the draw-command loadvrml - it fails using an inter-computer path. |
|
Dear Mkv, Just the bug 24115 is integrated, the failed test for this bug will pass without problems. Any questions are welcome, Vro |
|
Dear vro, could you please rebase branch CR23846 to current master, there are conflict files. |
|
The branch is CR23846_2. |
|
Dear BugMaster, Branch CR23846_2 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 9b173a5bee1b44ece088c9ae1b4db1b602d7f7b8 Number of compiler warnings: occt component : Linux: 368 (368 on master) Windows: 6 (6 on master) products component : Linux: 189 (190 on master) Windows: 287 (287 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR23846-2-master-occt/Debian60-64/bugs/xde/bug23846.html http://occt-tests/CR23846-2-master-occt/Windows-32-VC9/bugs/xde/bug23846.html bugs xde(005) bug23846: OK Testing on Linux: Total MEMORY difference: 353411504 / 353823372 Total CPU difference: 43595.0900000011 / 42954.25000000077 Testing on Windows: Total MEMORY difference: 407657268 / 407043760 Total CPU difference: 33771.953125 / 37414.875 There are not differences in images found by testdiff. |
occt: master 14b04bd2 2013-10-24 08:00:10 Committer: bugmaster Details Diff |
0023846: A crash on reading of a VRML file with wrong indices A check of indices. Test cases for issue CR23846 |
Affected Issues 0023846 |
|
mod - src/VrmlData/VrmlData_IndexedFaceSet.cxx | Diff File | ||
add - tests/bugs/xde/bug23846 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-03-21 13:57 | vro | New Issue | |
2013-03-21 13:57 | vro | Assigned To | => vro |
2013-03-21 13:57 | vro | File Added: crash_11_03_2013.zip | |
2013-03-22 12:47 | vro | Note Added: 0023854 | |
2013-03-22 12:47 | vro | Assigned To | vro => agv |
2013-03-22 12:47 | vro | Status | new => resolved |
2013-03-22 12:47 | vro | Note Added: 0023855 | |
2013-08-14 15:53 |
|
Note Added: 0025306 | |
2013-08-14 15:53 |
|
Assigned To | agv => bugmaster |
2013-08-14 15:53 |
|
Status | resolved => reviewed |
2013-08-14 17:12 |
|
Assigned To | bugmaster => mkv |
2013-08-15 10:44 |
|
Target Version | Unscheduled => 6.7.0 |
2013-08-15 16:56 |
|
Note Added: 0025323 | |
2013-08-15 16:57 |
|
Test case number | => bugs xde(005) bug23846 |
2013-08-15 16:57 |
|
Assigned To | mkv => vro |
2013-08-15 16:57 |
|
Status | reviewed => assigned |
2013-08-16 10:28 | vro | Note Added: 0025327 | |
2013-09-09 08:18 | vro | Assigned To | vro => mkv |
2013-09-09 08:20 | vro | Note Added: 0025492 | |
2013-09-13 17:13 |
|
Note Added: 0025570 | |
2013-09-13 17:13 |
|
Assigned To | mkv => vro |
2013-10-03 06:22 |
|
Relationship added | related to 0024176 |
2013-10-22 09:38 | vro | Note Added: 0026187 | |
2013-10-22 09:38 | vro | Assigned To | vro => mkv |
2013-10-22 09:38 | vro | Status | assigned => resolved |
2013-10-22 09:49 |
|
Status | resolved => reviewed |
2013-10-23 07:43 |
|
Note Added: 0026221 | |
2013-10-23 07:44 |
|
Assigned To | mkv => bugmaster |
2013-10-23 07:44 |
|
Status | reviewed => tested |
2013-10-25 14:42 | bugmaster | Changeset attached | => occt master 14b04bd2 |
2013-10-25 14:42 | bugmaster | Status | tested => verified |
2013-10-25 14:42 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |