0023846: A crash on reading of a VRML file with wrong indices A check of indices. Test cases for issue CR23846